feat: 添加 arm 架构支持
role

* 添加 arm64(aarch64) 架构支持
* 增加 mysql_shell_version 变量自定义 mysql shell 版本

mysql

* 升级默认版本到 8.0.34

mysql shell

* 使用二进制版本代替之前 rpm 版本
* 使用 python 脚本代替 JavaScript 脚本, 解决二进制版本不支持 JavaScript 的问题
* 使用脚本初始化 Innodb Cluster 集群, 代替之前 sql 模式

ansible

* 模块使用完整名称(FQCN)

Signed-off-by: Xijun Dai <daixijun1990@gmail.com>

--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -100,7 +100,9 @@ binlog-row-image                    = FULL
 binlog-rows-query-log-events        = ON
 log-bin-trust-function-creators     = TRUE
 log_bin                             = mysql-bin
+{% if mysql_version is version('8.0.34', '<') %}
 binlog_format                       = ROW
+{% endif %}
 binlog_checksum                     = NONE
 binlog_expire_logs_seconds          = 604800 # 7 days, 8.0以前叫 expire_logs_days,只能精确到天
 binlog_transaction_dependency_tracking  = WRITESET
@@ -123,7 +125,7 @@ general_log_file                = {{ mysql_logdir | regex_replace("/$") }}/mysql
 
 # Error log
 log_error                       = {{ mysql_logdir | regex_replace("/$") }}/mysqld.error.log
-log_error_verbosity             = 3
+log_error_verbosity             = 2
 relay_log                       = mysql-relay
 relay_log_purge                 = 1
 {% if mysql_version is version('8.0.23', '<') %}
@@ -141,7 +143,9 @@ gtid_mode                                    = ON  # 开启 GTID 功能
 enforce_gtid_consistency                     = ON  # 开启强一致性
 
 # 基于主键的并行复制
+{% if mysql_version is version('8.0.29', '<') %}
 {{ _mysql_term_replica }}_parallel_type                          = LOGICAL_CLOCK
+{% endif %}
 {{ _mysql_term_replica }}_preserve_commit_order                  = 1
 {{ _mysql_term_replica }}_parallel_workers                       = {{ ansible_processor_vcpus * 2 }}
 
@@ -200,12 +204,10 @@ report_host                             = {{ hostvars[inventory_hostname]['ansib
 report_port                             = {{ mysql_port }}
 
 [client]
-default_character_set           = {{ mysql_character_set_server }}
 port                            = {{ mysql_port }}
 socket                          = {{ mysql_socket }}
 
 [mysql]
-default_character_set           = {{ mysql_character_set_server }}
 port                            = {{ mysql_port }}
 socket                          = {{ mysql_socket }}
 prompt                          = "\u@\h \D [\d]> "
