--- a/templates/mysqld.service.j2
+++ b/templates/mysqld.service.j2
@@ -17,7 +17,11 @@ Type=notify
 TimeoutSec=0
 # Set environment variable MYSQLD_PARENT_PID. This is required for restart.
 Environment=MYSQLD_PARENT_PID=1
+{% if ansible_distribution_major_version == "7" and ansible_architecture == "aarch64" %}
+Environment=LD_PRELOAD=/usr/local/jemalloc/lib/libjemalloc.so
+{% else %}
 Environment=LD_PRELOAD=/lib64/libjemalloc.so
+{% endif %}
 # EnvironmentFile=-/etc/sysconfig/mysql
 # Start main service
 ExecStart={{ mysql_basedir }}/bin/mysqld --defaults-file={{ mysql_basedir }}/etc/my.cnf
