--- a/templates/mysqld.service.j2
+++ b/templates/mysqld.service.j2
@@ -17,8 +17,10 @@ Type=notify
 TimeoutSec=0
 # Set environment variable MYSQLD_PARENT_PID. This is required for restart.
 Environment=MYSQLD_PARENT_PID=1
-{% if ansible_distribution_major_version == "7" and ansible_architecture == "aarch64" %}
+{% if ansible_os_family == 'RedHat' and ansible_distribution_major_version == "7" and ansible_architecture == "aarch64" %}
 Environment=LD_PRELOAD=/usr/local/jemalloc/lib/libjemalloc.so
+{% elif ansible_os_family == 'Debian' %}
+Environment=LD_PRELOAD=/usr/lib/{{ ansible_architecture }}-linux-gnu/libjemalloc.so
 {% else %}
 Environment=LD_PRELOAD=/lib64/libjemalloc.so
 {% endif %}
